<resources>
    <!-- Main fragment -->
    <string name="app_name">SafeNote - Fingerprint</string>
    <string name="safe_note_header">Safe Note</string>
    <string name="safe_note_sub_header">for your security and privacy</string>
    <string name="store_data">Store data</string>
    <!-- Main fragment end -->

    <!-- Verification fragment -->
    <string name="authentication">Authentication</string>
    <string name="authenticationUpperInfo">Complete all steps to be automatically redirected to your notepad.</string>
    <string name="rootedDeviceBoxText">Device reliability</string>
    <string name="deviceAccessBoxText">Fingerprint</string>
    <string name="captchaBoxText">Recaptcha</string>
    <string name="rootedAuthInfo">Determining whether a device is rooted or not is not the easiest thing to do - but at least we can try.\nIf we have marked your device as rooted, make sure it is not.\nIf you are sure that your device is not rooted and you still don\'t get successful verification, please contact with us.</string>
    <string name="authenticationBottomInfo">If you don\'t complete all the steps on time, you will be redirected to the start screen.</string>
    <string name="remainingTime">Remaining time:</string>
    <string name="captchaFirst">Please finish recaptcha authentication first!</string>
    <string name="warningAttempt">Warning!\nAfter too many failed attempts your message will be gone!</string>
    <string name="accessToNote">Access to note</string>
    <string name="currentLock">You have tried too many times!\nTry again later...</string>
    <string name="accessToNoteSub">Confirm your identity to go to the note</string>
    <string name="noHardware">No hardware- sorry you can\'t use this app</string>
    <string name="hardwareUnavailable">Hardware unavailable - try again</string>
    <string name="noEnrolled">No biometric enrolled - set up one and try again</string>
    <string name="messageGone">You have failed authentication process too many times in a short period of time.\nWe have reasons not to trust you anymore.\nYour secret message is gone.\nSorry!\n</string>
    <string name="onEnrollment">Upsss!\nWe detected some changes in your device security...\nYour data is not safe anymore!\nDue to security violation we had to make sure that your data won\'t be obtained by wrong person.\nPlease remember that every biometric enrollment will clear your data!</string>
    <!-- Verification fragment end -->

    <!-- Note fragment -->
    <string name="notePlaceholder">Your secret note is here.</string>
    <string name="saveMessage">Save</string>
    <string name="changePassword">Change Password</string>
    <string name="savedSuccessfully">Secret message saved!</string>
    <string name="tooManyFailedAttempts">After another unsuccessful attempt, you will need to re-authenticate</string>
    <string name="savingNewData">Saving new message</string>
    <string name="savingNewDataSub">Confirm saving a new message with your fingerprint - if you fail, you will have to re-authenticate.</string>
    <!-- Note fragment end -->

    <!-- GLOBAL -->
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="incorrectPassword">Password incorrect!</string>
    <string name="noDevicePassword">For the highest level of security, we require device protection with a system password.\nIf your device is not protected with a password, go to the device settings and set it on.\nBiometric authentication will ensure the highest level of security - we recommend using it but even PIN will be okay.</string>
    <string name="failedWarning">You have already made 5 mistakes.\nBe careful!\nIf you do this 5 more times, all data will be deleted.</string>
    <string name="failedError">Unfortunately, you have already made a mistake too many times.\nYou have lost your credibility and hopefully YOUR data.</string>
    <!-- GLOBAL END -->
</resources>
