<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.VerificationFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/safe_note_header"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/authentication"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/authenticationUpperInfo"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_header"
        app:layout_constraintVertical_bias="0.203" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <LinearLayout
            android:id="@+id/rootedAuthBox"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/auth_border">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:background="@drawable/rooted_device" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/rootedDeviceBoxText"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/rootedAuthImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_weight="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/captchaAuthBox"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/auth_border">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:background="@drawable/captcha" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/captchaBoxText"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/captchaAuthImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_weight="0"
                android:background="@drawable/invalid" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/deviceAuthBox"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:alpha="0.3"
            android:background="@drawable/auth_border">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:background="@drawable/fingerprint" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/deviceAccessBoxText"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/deviceAuthImg"
                android:background="@drawable/invalid"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_weight="0" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/authInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/authenticationBottomInfo"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.404" />

    <TextView
        android:id="@+id/remainingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remainingTime"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authInformation" />

</androidx.constraintlayout.widget.ConstraintLayout>